# arches_casbin

./: README.md  package.json  pyproject.toml
arches_casbin/: apps.py  tasks.py  wkrm.toml
arches_casbin/management/commands/: apply_sets.py  print_permissions_table.py
arches_casbin/migrations/: 8011_registration_link_model.py
arches_casbin/permissions/: casbin.py
arches_casbin/pkg/graphs/resource_models/: Group.json  Person.json  Set.json
arches_casbin/utils/: forms.py  setting_utils.py
arches_casbin/views/: auth.py  person_user.py
tests/: README.md  test_settings.py
tests/casbin_tests/permissions/: permissions_coral_tests.py
